  * Should not create 'cast' method when superclasses have 'cast: false'.
  * Allow multiple 'header_base' paths to remove (removes the first one matching).
  * Make sure abstract types are detected even if all pure virtual functions are ignored.
  * Support for warn levels (5 = all, 4 = less, ..., 1 = errors).
  * Fixed a bug preventing dub from detecting ignored attributes.

== 2.0.0 2012-01-21
* Complete rewrite in Lua
  * Most of the previous features are there (but not all).
  * Added support for attributes read/write.
  * Garbage collection protection for pointers.
  * Return value optimization.
  * Garbage collection optimization (an idea from Tim Mensch).
  * Doxygen parsing (no need to provide xml).
  * Added support for nested classes and namespaces.
  * Added support for custom bindings on attributes.
  * Added 'Doxyfile' option on inspector to allow custom Doxyfile.
  * Added support for void *userdata to store Lua types.
  * Added support for transparent native table wrapping.
  * Added support for abstract types and casting to these types.
  * ...

== 1.1

* Minor enhancement
  * We can omit 'return 0' when defining body with yaml.
  * Automatically uses luaDestroy with subclassed with LuaObject.
  * Fixed 'deleted' method (should be present when we use LuaObject).

== 1.0.0

* Major enhancement
  * Support for yaml definition of binding body.
  * Support for superclass (reuse of definitions from the super class)
  
== 0.7.1

The tests in this release do not pass, but the generator is really better and works. I just
don't have the time to fix the tests.

* Major enhancement
  * When the object inherits from a LuaObject class, it calls luaInit(L, obj, "foo.Bar")

== 0.7.0 2011-08-19

The tests in this release do not pass, but the generator is really better and works. I just
don't have the time to fix the tests.

* Major enhancements
  * Support for finding userdata from lua table ('super').

== 0.6.7

* Major enhancements