@@ -40,6 +40,8 @@
   * Make sure abstract types are detected even if all pure virtual functions are ignored.
   * Support for warn levels (5 = all, 4 = less, ..., 1 = errors).
   * Fixed a bug preventing dub from detecting ignored attributes.
+  * Fixed a bug where dub would not recognize the correct super class.
+  * Disabling dub::Thread casting if not seen by doxygen.
 
 == 2.0.0 2012-01-21
 * Complete rewrite in Lua
